<resources>
    <!--Not to be translated-->

    <string name="format_24_hour" translatable="false">HH:mm</string>
    <string name="format_12_hour" translatable="false">hh:mm aa</string>

    <string name="default_date_format" translatable="false">MM.dd. EEEE</string>

    <string name="allowed_characters_date_format" translatable="false">GyYMLwWDdFEu .,()</string>
    <string name="allowed_characters_color" translatable="false">0123456789abcdefABCDEF</string>

    <!--Not to be translated-->

    <string name="app_name">Open Routine</string>
    <string-array name="cycles">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <!--Notification-->
    <string name="channel_name">Open Routine</string>

    <string name="notification_title">Hey!</string>
    <string name="notification_content_text">Are you doing, %1$s?</string>


    <string name="notification_action">Already on it</string>
    <string name="notification_show_before_start">Coming up in %3$s, %1$s (%2$s)</string>
    <string name="notification_show_at_start">Starting now, %1$s (%2$s)</string>
    <string name="notification_show_after_start">Started %3$s ago, %1$s (%2$s)</string>

    <string name="notification_show_before_end">Ending in %3$s, %1$s (%2$s)</string>
    <string name="notification_show_at_end">Ending now, %1$s (%2$s)</string>
    <string name="notification_show_after_end">Ended %3$s ago, %1$s (%2$s)</string>
    <string name="notification_action_other_activity">Doing something else</string>
    <string name="notification_other_activity">Choose other activity:</string>


    <string-array name="silence_length">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Other:</item>
    </string-array>

    <!-- Settings -->

    <string name="default_activity_1">Studying</string>
    <string name="default_activity_2">Work</string>
    <string name="default_activity_3">Sports</string>
    <string name="default_activity_4">Leisure</string>
    <string name="default_activity_5">Chores</string>
    <string-array name="default_activities">
        <item>@string/default_activity_1</item>
        <item>@string/default_activity_2</item>
        <item>@string/default_activity_3</item>
        <item>@string/default_activity_4</item>
        <item>@string/default_activity_5</item>
    </string-array>

    <!--General strings-->


    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="at_colon">At:</string>
    <string name="at">At</string>
    <string name="minutes">minutes</string>

    <string name="day_of_week_1">Monday</string>
    <string name="day_of_week_2">Tuesday</string>
    <string name="day_of_week_3">Wednesday</string>
    <string name="day_of_week_4">Thursday</string>
    <string name="day_of_week_5">Friday</string>
    <string name="day_of_week_6">Saturday</string>
    <string name="day_of_week_7">Sunday</string>
    <string-array name="days_of_week">
        <item>@string/day_of_week_1</item>
        <item>@string/day_of_week_2</item>
        <item>@string/day_of_week_3</item>
        <item>@string/day_of_week_4</item>
        <item>@string/day_of_week_5</item>
        <item>@string/day_of_week_6</item>
        <item>@string/day_of_week_7</item>
    </string-array>

    <string name="day_short">d</string>
    <string name="hour_short">h</string>
    <string name="minute_short">m</string>

    <string name="day_long">Day</string>
    <string name="hour_long">Hour</string>
    <string name="minute_long">Minute</string>

    <!--Main activity-->

    <string name="main_menu_1_title">Lineup</string>
    <string name="main_menu_2_title">To-Do</string>
    <string name="main_menu_3_title">Routines</string> <!-- Routine-->
    <string name="main_menu_4_title">Activities</string>

    <!--Todo_ strings-->

    <string name="todo_singular">to-do</string>
    <string name="todo_hint">Todo\'s text</string>
    <string name="todo_add_time">Add time</string>
    <string name="todo_set_text_error">Text can\'t be empty!</string>
    <string name="todo_no_todo">Nothing to do on this day!</string>
    <string name="todo_no_day_item">No plans to add to</string>

    <!--DayItem activity-->

    <string name="day_item_singular">item</string>
    <string name="buttonDone">Done</string>
    <string name="day_item_name_hint">Title</string>
    <string name="set_day_name_start">Set start</string>
    <string name="set_day_name_end">Set end</string>

    <string name="day_no_item">No plans for this day!</string>

    <string name="preposition1">From:</string>
    <string name="preposition2">To:</string>
    <string name="preposition3">" "</string>

    <string name="activity_picker_title">Select a type of activity:</string>

    <string name="notifications">Notifications</string>
    <string name="add_notification">Add notification</string>
    <string name="notification_at_start">At start</string>
    <string name="notification_at_end">At end</string>

    <string name="notification_start">start</string>
    <string name="notification_end">end</string>
    <string name="notification_before">Before</string>
    <string name="notification_after">After</string>

    <!-- Here true means english ordering, "At start"-->
    <bool name="notification_time_order">true</bool>

    <string-array name="notification_times_pre">
        <item>@string/at</item>
        <item>@string/notification_before</item>
        <item>@string/notification_after</item>
    </string-array>
    <string-array name="notification_times">
        <item>@string/notification_start</item>
        <item>@string/notification_end</item>
    </string-array>



    <!--Regime strings-->
    <string name="regime_title">Routines</string>
    <string name="regime_singular">routine</string>
    
    <string name="regime_no_regime">No routines, yet!</string>

    <string name="regime_menu_1_title">Days</string>
    <string name="regime_menu_2_title">To-Dos</string>

    <string name="regime_dialog_title">Set routine</string>

    <string name="regime_dialog_schedule">Schedule</string>

    <string name="regime_name_hint">Name the routine</string>

    <string name="regime_dialog_schedule_on">On</string>
    <string name="regime_dialog_schedule_off">Off</string>
    <string name="regime_dialog_schedule_default">by <b>default</b></string>
    <string name="regime_dialog_schedule_from">from:</string>
    <string name="regime_dialog_schedule_to">to:</string>
    <string name="regime_dialog_schedule_to_optional">" "</string>
    <string name="regime_dialog_schedule_forever">forever</string>

    <string name="schedule_item_dialog_title">Add to schedule</string>
    <string name="schedule_item_dialog_range">Range:</string>
    <string name="schedule_item_dialog_status">Status:</string>

    <string name="schedule_item_dialog_overlap_warning">Warning: schedule overlaps</string>

    <string name="schedule_item_default_info">You can\'t remove this item</string>

    <!--Activity strings-->
    <string name="activity_title">Activities</string>
    <string name="activity_singular">activity</string>
    <string name="activity_name">Activity name</string>
    <string name="remove_activity">Do you want to remove this %1$s?</string>
    <string name="activity_preferred_time_length">Length of activity (optional)</string>

    <string name="color_prefix" translatable="false">#</string>
    <string name="activity_custom_color">Custom color</string>
    <string name="activity_pick_color">Pick color</string>
    <string name="activity_pick_A_color">Pick a color</string>

    <!--Settings strings-->
    <string name="setting_title">Settings</string>

    <string name="setting_system_default">System default</string>

    <string name="format_settings_title">Look and feel</string>

    <string name="date_format_setting_title">Set date format</string>
    <string name="date_format_setting_summary"><b>Advanced feature:</b> Set date format based on Java\'s SimpleDateFormat.</string>

    <string name="date_format_setting_info_title">Info about the date format</string>
    <string name="date_format_setting_info_data">https://docs.oracle.com/javase/8/docs/api/java/text/SimpleDateFormat.html</string>


    <string name="hour_format_setting_title">Set the hour format</string>
    <string name="hour_format_setting_summary">Choose between 12 and 24 hour formats</string>
    <string-array name="hour_format_setting_entries">
        <item>@string/setting_system_default</item>
        <item>12-hour format</item>
        <item>24-hour format</item>
    </string-array>

    <string name="dark_mode_setting_title">Set dark mode</string>
    <string name="dark_mode_setting_summary">Select dark mode</string>
    <string-array name="dark_mode_setting_entries">
        <item>@string/setting_system_default</item>
        <item>Dark mode</item>
        <item>Light mode</item>
    </string-array>

    <string-array name="setting_entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>


    <string name="language_setting_title">Select language</string>

    <string name="system_default">System default</string>
    <string name="english" translatable="false">English</string>
    <string name="esperanto" translatable="false">Esperanto</string>
    <string name="hungarian" translatable="false">Magyar</string>
    <string-array name="language_setting_entries">
        <item>@string/system_default</item>
        <item>@string/english</item>
        <item>@string/esperanto</item>
        <item>@string/hungarian</item>
    </string-array>
    <string-array name="language_setting_value_entries">
        <item>null</item>
        <item>en</item>
        <item>eo</item>
        <item>hu</item>
    </string-array>

    <string name="data_export_setting_title">Export data</string>
    <string name="data_export_setting_summary">Export data to a .zip at the selected location</string>
    <string name="data_import_setting_title">Import data</string>
    <string name="data_import_setting_summary">Import data from a .zip, the zip must contain a saves folder</string>

    <string name="data_import_format_error">Error in the format of the zip file, import failed</string>
    <string name="data_import_success">Successful import</string>
    <string name="data_export_success">Successful export</string>

    <string name="see_code">Code</string>
    <string name="donate">Donate</string>

    <string name="donation_dialog_title">Support us!</string>
    <string name="donation_monero" translatable="false">Monero:</string>
    <string name="donation_bitcoin" translatable="false">Bitcoin:</string>
    <string name="donation_kofi" translatable="false">Ko-fi:</string>
    <string name="donation_copy">Copy</string>
    <string name="donation_view">View</string>
    <string name="bitcoin_copied">Successfully copied Bitcoin address to clipboard</string>
    <string name="monero_copied">Successfully copied Monero address to clipboard</string>
    <string name="monero_address" translatable="false">44z1NzFE4Lz6enNV688ALHRbEA4CZSFBH9tQBWYqzRp59VC1cZW1P3dDmMuTCqj1rUPiaxas5egEK1k1wr9fzDXMPS6KHnd</string>
    <string name="bitcoin_address" translatable="false">bc1qthk4e3pjw6fe9gt55erg4a36tl8cnp2l0rnjqu</string>
    <string name="kofi_link" translatable="false">https://www.ko-fi.com/lovasr</string>

</resources>