<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/alert_dialog_background"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donation_dialog_title"
        android:padding="10dp"
        android:textSize="26sp"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="6dp"
        android:background="@android:color/darker_gray"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:layout_gravity="center">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/donation_monero"
            android:textSize="22sp"
            android:layout_margin="10dp"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/donation_copy"
            android:background="@drawable/compact_outline_background"
            android:id="@+id/donationMoneroCopy"
            android:layout_margin="10dp"
            android:layout_gravity="end"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/donation_bitcoin"
            android:textSize="22sp"
            android:layout_margin="10dp"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/donation_copy"
            android:background="@drawable/compact_outline_background"
            android:id="@+id/donationBitcoinCopy"
            android:layout_margin="10dp"
            android:layout_gravity="end"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/donation_kofi"
            android:textSize="22sp"
            android:layout_margin="10dp"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/donation_view"
            android:background="@drawable/compact_outline_background"
            android:id="@+id/donationKofi"
            android:layout_margin="10dp"
            android:layout_gravity="end"/>

    </GridLayout>
</LinearLayout>