<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_title"
        android:padding="10dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="6dp"
        android:background="@android:color/darker_gray"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/settingsFrame"
        android:layout_weight="4">
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_code_24"
            android:id="@+id/settingsCode"
            android:layout_weight="2"
            android:background="@drawable/compact_outline_background"
            android:text="@string/see_code"
            android:paddingHorizontal="20dp"
            android:layout_margin="6dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/dollar"
            android:id="@+id/settingsDonate"
            android:layout_weight="2"
            android:background="@drawable/compact_outline_background"
            android:text="@string/donate"
            android:paddingHorizontal="20dp"
            android:layout_margin="6dp"/>
    </LinearLayout>
</LinearLayout>
