<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@drawable/compact_outline_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/scheduleTextView1"
        android:textSize="14sp"
        android:layout_marginHorizontal="5dp"
        android:padding="4dp"
        android:background="@drawable/outline_background"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/regime_dialog_schedule_from"
        android:textSize="14sp"
        android:padding="4dp"
        android:id="@+id/scheduleTextView2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/scheduleTextView3"
        android:textSize="14sp"
        android:layout_marginHorizontal="5dp"
        android:padding="4dp"
        android:background="@drawable/outline_background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/regime_dialog_schedule_to"
        android:textSize="14sp"
        android:padding="4dp"
        android:id="@+id/scheduleTextView4"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/scheduleTextView5"
        android:textSize="14sp"
        android:layout_marginHorizontal="5dp"
        android:padding="4dp"
        android:background="@drawable/outline_background"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="14sp"
        android:padding="4dp"
        android:id="@+id/scheduleTextView6"
        android:text="@string/regime_dialog_schedule_to_optional"/>
</LinearLayout>