<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/outlineActivityTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="#D1D1D1"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="2dp"
            android:layout_margin="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activityEditName"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlineActivityTimeTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_preferred_time_length"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:suffixText="@string/minutes"
                app:boxStrokeColor="#D1D1D1"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                android:layout_margin="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/activityEditTime"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activityEditDone"
            android:background="@drawable/spinner_background"
            android:layout_margin="10dp"
            android:text="@string/buttonDone"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>