<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/alert_dialog_background">

    <TextView
        android:id="@+id/scheduleItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/schedule_item_dialog_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"/>

    <View
        android:id="@+id/scheduleItemSeparator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/scheduleItemTitle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scheduleDialogDatePickerText"
        android:textColor="@color/color_text_default"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/schedule_item_dialog_range"
        android:layout_below="@+id/scheduleItemSeparator"
        android:layout_alignTop="@+id/scheduleDialogDatePicker"
        android:layout_alignBottom="@+id/scheduleDialogDatePicker"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scheduleDialogDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/outline_background"
        android:foreground="?attr/selectableItemBackground"
        android:paddingHorizontal="10dp"
        android:layout_toEndOf="@+id/scheduleDialogDatePickerText"
        android:layout_below="@+id/scheduleItemSeparator"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scheduleItemActiveText"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/color_text_default"
        android:text="@string/schedule_item_dialog_status"
        android:layout_below="@+id/scheduleItemSeparator"
        android:layout_alignTop="@+id/scheduleItemActive"
        android:layout_alignBottom="@+id/scheduleItemActive"/>
    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scheduleItemActive"
        android:layout_margin="10dp"
        android:layout_below="@+id/scheduleDialogDatePicker"
        android:layout_toEndOf="@+id/scheduleDialogDatePickerText"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scheduleItemWarningIcon"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_warning_24"
        android:visibility="invisible"
        android:layout_below="@+id/scheduleItemActive"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scheduleItemWarningText"
        android:text="@string/schedule_item_dialog_overlap_warning"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="@color/color_warning"
        android:layout_below="@+id/scheduleItemActive"
        android:layout_toEndOf="@+id/scheduleItemWarningIcon"
        android:layout_alignTop="@+id/scheduleItemWarningIcon"
        android:layout_alignBottom="@+id/scheduleItemWarningIcon"/>
    <Button
        android:id="@+id/scheduleItemDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:background="@drawable/spinner_background"
        android:text="@string/buttonDone"
        android:layout_below="@+id/scheduleItemWarningText"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>